Sandbox/02-12-2025/force-app/main/default/objects/Sales_Database_Archive__b/fields/Advertiser_Seat_Name__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Seat_Name__c</fullName>
    <label>Advertiser Seat Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>