Sandbox/02-12-2025/force-app/main/default/objects/Sales_Database_Archive__b/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Database Archives (Billing Account)</relationshipLabel>
    <relationshipName>Sales_Database_Archives3</relationshipName>
    <type>Lookup</type>
</CustomField>