Sandbox/02-12-2025/force-app/main/default/objects/Sales_Database_Archive__b/fields/Buyer_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Country_Code__c</fullName>
    <label>Buyer Country Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>