Sandbox/02-12-2025/force-app/main/default/objects/Sales_Database_Archive__b/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>