Sandbox/02-12-2025/force-app/main/default/objects/Sales_Database_Archive__b/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Database Archives</relationshipLabel>
    <relationshipName>Sales_Database_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>