Sandbox/02-12-2025/force-app/main/default/objects/Sales_Database_Archive__b/fields/Client_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Name__c</fullName>
    <label>Client Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>