Sandbox/02-12-2025/force-app/main/default/objects/Sales_Database_Archive__b/fields/Eyeota_Segment_Key__c.field-meta.xml
<CustomField>
    <fullName>Eyeota_Segment_Key__c</fullName>
    <label>Eyeota Segment Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>