Sandbox/02-12-2025/force-app/main/default/objects/Sales_Database_Archive__b/fields/Sales_Database_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Database_ID__c</fullName>
    <description>Auto-number field from Sales Database Custom Object e.g., S-123456, S-123457, etc.</description>
    <label>Sales Database ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>