Sandbox/02-12-2025/force-app/main/default/objects/Sales_Database_Archive__b/fields/Segments_Database_ID__c.field-meta.xml
<CustomField>
    <fullName>Segments_Database_ID__c</fullName>
    <label>Segments Database ID</label>
    <referenceTo>Segment_Category_Mapping__c</referenceTo>
    <relationshipLabel>Sales Database Archives</relationshipLabel>
    <relationshipName>Sales_Database_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>